--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
-html { 
-    min-height: 100%; }
+html, body {
+    margin: 0;
+    height: 100%;
+}
 
 body {
     font-family: Arial, Helvetica, sans-serif;
